feat(#91): InMemoryKeyRotationRepository